--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,48 +1,57 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/dark_blue"
-    android:orientation="vertical"
-    android:padding="24dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/logo_f_max"
-        android:layout_gravity="center" />
-
-    <TextView
-        android:text="Recuperação de Senha"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center" />
-
-    <EditText
-        android:id="@+id/edtEmailOuCnpj"
-        android:hint="E-mail ou CNPJ"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/white"
-        android:textColorHint="#AAAAAA"
+    <LinearLayout
+        android:orientation="vertical"
+        android:padding="24dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp" />
+        android:gravity="center">
 
-    <Button
-        android:id="@+id/btnEnviarLink"
-        android:text="ENVIAR LINK DE RECUPERAÇÃO"
-        android:backgroundTint="@color/orange"
-        android:textColor="@color/white"
-        android:layout_marginTop="24dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/logo_f_max"
+            android:layout_gravity="center"
+            android:contentDescription="Logo Fleet Max" />
 
-    <TextView
-        android:id="@+id/tvVoltarLogin"
-        android:text="Voltar para o login"
-        android:textColor="@color/white"
-        android:layout_gravity="center"
-        android:layout_marginTop="24dp" />
-</LinearLayout>
+        <TextView
+            android:text="Recuperação de Senha"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center" />
+
+        <EditText
+            android:id="@+id/edtEmailOuCnpj"
+            android:hint="E-mail ou CNPJ"
+            android:inputType="textEmailAddress"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/white"
+            android:textColorHint="#AAAAAA"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp" />
+
+        <Button
+            android:id="@+id/btnEnviarLink"
+            android:text="ENVIAR LINK DE RECUPERAÇÃO"
+            android:backgroundTint="@color/orange"
+            android:textColor="@color/white"
+            android:layout_marginTop="24dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tvVoltarLogin"
+            android:text="Voltar para o login"
+            android:textColor="@color/white"
+            android:layout_gravity="center"
+            android:layout_marginTop="24dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:textStyle="bold" />
+    </LinearLayout>
+</ScrollView>
