--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,70 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@color/dark_blue"
-    android:padding="24dp"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/background_dark"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/logo_f_max"
-        android:layout_gravity="center"
+    <LinearLayout
+        android:padding="24dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/logo_f_max"
+        android:layout_marginBottom="32dp"
         android:contentDescription="Logo" />
 
-    <EditText
-        android:id="@+id/edtCnpj"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="CNPJ"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/white"
-        android:textColorHint="#AAAAAA"
-        android:layout_marginTop="24dp" />
+        <EditText
+            android:id="@+id/inputCnpj"
+            android:hint="CNPJ"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/edit_text_background"
+            android:padding="12dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/gray_text"
+            android:layout_marginBottom="16dp"/>
 
-    <EditText
-        android:id="@+id/edtEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/white"
-        android:textColorHint="#AAAAAA"
-        android:layout_marginTop="12dp" />
+        <EditText
+            android:id="@+id/inputEmail"
+            android:hint="Email"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/edit_text_background"
+            android:padding="12dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/gray_text"
+            android:layout_marginBottom="16dp"/>
 
-    <EditText
-        android:id="@+id/edtSenha"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Senha"
-        android:inputType="textPassword"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/white"
-        android:textColorHint="#AAAAAA"
-        android:layout_marginTop="12dp" />
+        <EditText
+            android:id="@+id/inputSenha"
+            android:hint="Senha"
+            android:inputType="textPassword"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/edit_text_background"
+            android:padding="12dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/gray_text"
+            android:layout_marginBottom="24dp"/>
 
-    <Button
-        android:id="@+id/btnLogin"
-        android:text="Login"
-        android:backgroundTint="@color/orange"
-        android:textColor="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp" />
+        <Button
+            android:id="@+id/btnLogin"
+            android:text="Login"
+            android:backgroundTint="@color/orange"
+            android:textColor="@color/background_dark"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="12dp"/>
 
-    <TextView
-        android:id="@+id/tvEsqueceuSenha"
-        android:text="Esqueceu senha?"
-        android:textColor="@color/white"
-        android:layout_marginTop="12dp"
-        android:layout_gravity="center" />
+        <TextView
+            android:id="@+id/txtEsqueceuSenha"
+            android:text="Esqueci senha"
+            android:textColor="@color/orange"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="36dp"/>
 
-    <TextView
-        android:id="@+id/tvCadastro"
-        android:text="Novo na Fleet Max? Comece aqui!"
-        android:textColor="@color/white"
-        android:layout_marginTop="24dp"
-        android:layout_gravity="center" />
-</LinearLayout>
+        <TextView
+            android:text="Novo na Fillet Max?"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/txtComeceAqui"
+            android:text="Comece aqui!"
+            android:textColor="@color/orange"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+</ScrollView>
