--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,16 @@
     </style>
 
     <style name="Theme.FletMaxMobile" parent="Base.Theme.FletMaxMobile" />
+
+    <style name="Theme.FletMaxMobile.Fullscreen" parent="Theme.FletMaxMobile">
+        <item name="android:actionBarStyle">@style/Widget.Theme.FletMaxMobile.ActionBar.Fullscreen
+        </item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
+    <style name="ThemeOverlay.FletMaxMobile.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
 </resources>
